(executable
 (name game_js)
 (modes js)
 (modules game_js)
 (promote (until-clean))
 (preprocess (pps js_of_ocaml-ppx))
 (libraries game js_of_ocaml gfx_jsoo)
 (js_of_ocaml (flags -I . --file=../resources/files))
)



(executable
 (name game_sdl)
 (modes native)
 (promote (until-clean))
 (modules game_sdl)
 (libraries game gfx_sdl tsdl tsdl-image tsdl-ttf)
)
